--- a/egitim1sf1.html
+++ b/egitim1sf1.html
@@ -71,7 +71,7 @@
 </table>
 <h1 id="son">id kullandık sona geldi</h1>
 <a href="#baslik">basa git</a>
-<a href="kemal1yeni.html">kemal1yeni.html</a>
+<a href="egitim1sf2.html">kemal1yeni.html</a>
 
 <form>
 <br/><input>
